@@ -3,7 +3,8 @@
 	* data/gupnp-av-cp.glade:
 	* src/av-cp/playlist-treeview.c
 
-	Play selected item on playlist row activation.
+	- Play selected item on playlist row activation.
+	- Use glade for connecting all treeview signals.
 
 2008-02-03  Zeeshan Ali Khattak  <zeenix@gmail.com>
 
